--- a/src/encrypt/encrypt.html
+++ b/src/encrypt/encrypt.html
@@ -77,6 +77,33 @@
             </div>
           </div>
 
+          <div class="form-item field radio">
+            <label class="title ">
+              (If female) I am pregnant
+            </label>
+            <div class="option">
+              <label>
+                <input type="radio" name="pregnant" value="yes" /> Yes
+              </label>
+            </div>
+            <div class="option">
+              <label>
+                <input type="radio" name="pregnant" value="no" /> No
+              </label>
+            </div>
+            <div class="option">
+              <label>
+                <input type="radio" name="pregnant" value="I'm not sure" /> I'm not sure
+              </label>
+            </div>
+            <div class="option">
+              <label>
+                <input type="radio" name="pregnant" value="Other" /> Other:
+                <input type="text" name="pregnant_other" />
+              </label>
+            </div>
+          </div>
+
           <div class="form-item field checkbox required">
             <label class="title">My race/ethnicity could be characterized as</label>
             <fieldset id="race">
@@ -119,40 +146,33 @@
                 </div>
             </fieldset>
           </div>
-          <div class="form-item What is your preferred language?</label>
-            <fieldset id="language">
-                <div class="option">
-                  <label>
-                   <input type="checkbox" name="language_english" value="English" />
-                   English
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="language_spanish" value="Spanish" />
-                    Spanish
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="language_russian" value="Russian" />
-                    Russian
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="language_chinese" value="Chinese (Cantonese or Mandarin)" />
-                    Chinese (Cantonese or Mandarin)
-                  </label>
-                </div>
-                <div class="option">
-                  <label>
-                    <input type="checkbox" name="another" value="Another language" />
-                    Another language
-                  </label>
-                </div>
+
+          <div class="form-item field text">
+            <label class="title">What is your preferred language?</label>
+              <fieldset id="language">
+                <select name="state">
+                  <div class="option">
+                     <option name="language_english" value="English">English</option>
+                  </div>
+                  <div class="option">
+                    <!-- <label> - Derrek's formating, try removing these --> 
+                     <option name="language_spanish" value="Spanish">Spanish</option>
+                    <!-- </label> -->
+                  </div>
+                  <div class="option">
+                     <option name="language_russian" value="Russian">Russian</option>
+                  </div>
+                  <div class="option">
+                     <option name="language_chinese" value="Chinese (Cantonese or Mandarin">Chinese (Cantonese or Mandarin</option>
+                  </div>
+                  <div class="option">
+                    <option name="another" value="Another language">Another language</option>
+                  </div>
+                </select>
             </fieldset>
           </div>
+
+
           <h3>The following questions are also required for program enrollment</h3>
           <div class="form-item field radio required">
             <label class="title required">Do you have health insurance?</label>
@@ -351,10 +371,6 @@
               </label>
             </div>
           </div>
-          <div class="form-item field text">
-            <label class="title">What's your zip code?</label>
-            <input class="field-element" name="zip" placeholder="Your answer" />
-          </div>
 
           <div class="form-item field radio">
             <label class="title ">
@@ -408,6 +424,69 @@
                 Yes, none of the above
               </label>
             </div>
+          </div>
+
+          <div class="form-item field text">
+            <label class="title">State</label>
+            <div class="option">
+              <select name="state">
+                <option value="AL">Alabama</option>
+                <option value="AK">Alaska</option>
+                <option value="AZ">Arizona</option>
+                <option value="AR">Arkansas</option>
+                <option value="CA">California</option>
+                <option value="CO">Colorado</option>
+                <option value="CT">Connecticut</option>
+                <option value="DE">Delaware</option>
+                <option value="FL">Florida</option>
+                <option value="GA">Georgia</option>
+                <option value="HI">Hawaii</option>
+                <option value="ID">Idaho</option>
+                <option value="IL">Illinois</option>
+                <option value="IN">Indiana</option>
+                <option value="IA">Iowa</option>
+                <option value="KS">Kansas</option>
+                <option value="KY">Kentucky</option>
+                <option value="LA">Louisiana</option>
+                <option value="ME">Maine</option>
+                <option value="MD">Maryland</option>
+                <option value="MA">Massachusetts</option>
+                <option value="MI">Michigan</option>
+                <option value="MN">Minnesota</option>
+                <option value="MS">Mississippi</option>
+                <option value="MO">Missouri</option>
+                <option value="MT">Montana</option>
+                <option value="NE">Nebraska</option>
+                <option value="NV">Nevada</option>
+                <option value="NH">New Hampshire</option>
+                <option value="NJ">New Jersey</option>
+                <option value="NM">New Mexico</option>
+                <option value="NY">New York</option>
+                <option value="NC">North Carolina</option>
+                <option value="ND">North Dakota</option>
+                <option value="OH">Ohio</option>
+                <option value="OK">Oklahoma</option>
+                <option value="OR">Oregon</option>
+                <option value="PA">Pennsylvania</option>
+                <option value="RI">Rhode Island</option>
+                <option value="SC">South Carolina</option>
+                <option value="SD">South Dakota</option>
+                <option value="TN">Tennessee</option>
+                <option value="TX">Texas</option>
+                <option value="UT">Utah</option>
+                <option value="VT">Vermont</option>
+                <option value="VA">Virginia</option>
+                <option value="WA">Washington</option>
+                <option value="WV">West Virginia</option>
+                <option value="WI">Wisconsin</option>
+                <option value="WY">Wyoming</option>
+              </select>
+            </div>
+          </div>
+
+          <div class="form-item field text">
+            <label class="title">What's your zip code?</label>
+            <input class="field-element" name="zip" placeholder="Your answer" />
           </div>
 
           <h3>The next few questions are about drugs and drug use</h3>
@@ -539,94 +618,9 @@
 
           <h3>The following questions are about opioid overdose</h3>
 
-          <div class="form-item field radio">
-            <label class="title ">
-              (If female) I am pregnant
-            </label>
-            <div class="option">
-              <label>
-                <input type="radio" name="pregnant" value="yes" /> Yes
-              </label>
-            </div>
-            <div class="option">
-              <label>
-                <input type="radio" name="pregnant" value="no" /> No
-              </label>
-            </div>
-            <div class="option">
-              <label>
-                <input type="radio" name="pregnant" value="I'm not sure" /> I'm not sure
-              </label>
-            </div>
-            <div class="option">
-              <label>
-                <input type="radio" name="pregnant" value="Other" /> Other:
-                <input type="text" name="pregnant_other" />
-              </label>
-            </div>
-          </div>
-
           <div class="form-item field text">
             <label class="title">City</label>
             <input class="field-element" name="city" />
-          </div>
-
-          <div class="form-item field text">
-            <label class="title">State</label>
-            <div class="option">
-              <select name="state">
-                <option value="AL">Alabama</option>
-                <option value="AK">Alaska</option>
-                <option value="AZ">Arizona</option>
-                <option value="AR">Arkansas</option>
-                <option value="CA">California</option>
-                <option value="CO">Colorado</option>
-                <option value="CT">Connecticut</option>
-                <option value="DE">Delaware</option>
-                <option value="FL">Florida</option>
-                <option value="GA">Georgia</option>
-                <option value="HI">Hawaii</option>
-                <option value="ID">Idaho</option>
-                <option value="IL">Illinois</option>
-                <option value="IN">Indiana</option>
-                <option value="IA">Iowa</option>
-                <option value="KS">Kansas</option>
-                <option value="KY">Kentucky</option>
-                <option value="LA">Louisiana</option>
-                <option value="ME">Maine</option>
-                <option value="MD">Maryland</option>
-                <option value="MA">Massachusetts</option>
-                <option value="MI">Michigan</option>
-                <option value="MN">Minnesota</option>
-                <option value="MS">Mississippi</option>
-                <option value="MO">Missouri</option>
-                <option value="MT">Montana</option>
-                <option value="NE">Nebraska</option>
-                <option value="NV">Nevada</option>
-                <option value="NH">New Hampshire</option>
-                <option value="NJ">New Jersey</option>
-                <option value="NM">New Mexico</option>
-                <option value="NY">New York</option>
-                <option value="NC">North Carolina</option>
-                <option value="ND">North Dakota</option>
-                <option value="OH">Ohio</option>
-                <option value="OK">Oklahoma</option>
-                <option value="OR">Oregon</option>
-                <option value="PA">Pennsylvania</option>
-                <option value="RI">Rhode Island</option>
-                <option value="SC">South Carolina</option>
-                <option value="SD">South Dakota</option>
-                <option value="TN">Tennessee</option>
-                <option value="TX">Texas</option>
-                <option value="UT">Utah</option>
-                <option value="VT">Vermont</option>
-                <option value="VA">Virginia</option>
-                <option value="WA">Washington</option>
-                <option value="WV">West Virginia</option>
-                <option value="WI">Wisconsin</option>
-                <option value="WY">Wyoming</option>
-              </select>
-            </div>
           </div>
 
         <input class="button sqs-system-button sqs-editable-button"
